Changes to message handling in KnowWE: 	* SubtreeHandler now return a Collection of KDOMReportMessages 	  (instead of a single KDOMReportMessage). 	* KnowWEUtils now provides a variety of methods to store and retrieve messages. 	* All methods to store messages now support the necessary attributes KnowWEArticle 	  (for the article the Message is stored for) and Class (for the source of the message). 	* To store messages you can choose between #storeMessages(..., Collection) 	  and #storeSingleMessage(..., Message). 	  IMPORTANT: You can use methods to store messages only once for each attribute (article, 	  section, source). If you use it a second time for the same attributes, the first 	  message(s) get(s) overwritten! 	* All methods to retrieve messages now return unmodifiable Collections to prevent stuff 	  like getMessages(...).add(Message x), which is not longer allowed. To store messages, 	  always use the according store-methods. 	* All methods concerning messages were removed from DefaultMarkupType and merged with 	  already existing methods in the AbstractKnowWEObjectType. They all just use the 	  corresponding KnowWEUtils methods though. 		- former DefaultMarkupType#addErrorMessage(Section, Message) is now 		  AbstractKnowWEObjectType#storeMessages(KnowWEArticle, Section, Class, Message) 		- former DefaultMarkupType#getErrorMessage(Section, Message) is now 		  AbstractKnowWEObjectType#getMessages(KnowWEArticle, Section, Class) 		- former DefaultMarkupType#getAllErrorMessage(Section, Message) is now 		  AbstractKnowWEObjectType#getMessagesFromSubtree(KnowWEArticle, Section, Class) 	* KDOMReportMessage now also uses the corresponding KnowWEUtils methods. 	* Fixed trac #172: Error Messages in DefaultMarkupTypes are getting doubled or even tripled
	~ right now something seems to be a bit off with QuestionTreeNew... for example Answers get
	  created twice in two different SubtreeHandlers. With the changes to the message system,
	  this results in the display of